--- a/front_end.html
+++ b/front_end.html
@@ -9,50 +9,25 @@
             if (targetSection) {
                 targetSection.scrollIntoView({ behavior: "smooth" });
             }
-        }
-    </script>
-</head>
-<body>
-    <div>
-        <fieldset class="menu_bar">
-            <h3>
-                <span id="home" href="#prod_name">Home</span>&nbsp;&nbsp;&nbsp;
-                <span id="mk_msc" href="#mainmusic">Make Music</span>&nbsp;&nbsp;&nbsp;
-                <span id="files">Your Files</span>&nbsp;&nbsp;&nbsp;
-                <span id="tutor">Tutorial</span>&nbsp;&nbsp;&nbsp;
-                <span id="sign_up">Sign Up</span>&nbsp;&nbsp;&nbsp;
-                <span id="login">Login</span>&nbsp;&nbsp;&nbsp;
-                <a id="abt_us" href="javascript:void(0);" onclick="openAboutUs();">About Us</a>
-            </h3>
-        </fieldset>
-    </div>
-    <hr>
-    <div id="body">
-        <p id="prod_name" href="#home">Note Nexus</p>
-    </div>
-    <section id="target_section_id">
-        <h2>About Us</h2>
-        <p>Welcome to Note Nexus - your creative hub for making music!</p>
-
-        <h3>Our Story</h3>
-        <p>At Note Nexus, we are passionate about music and technology. Our journey started with a vision to empower music enthusiasts, whether you're a beginner, a professional musician, or somewhere in between. We believe that making music should be accessible, enjoyable, and inspiring for everyone.</p>
-
-        <h3>What We Offer</h3>
-        <p>Our platform provides a wide range of tools and features to help you unleash your musical creativity. Whether you're looking to compose, record, produce, or collaborate with others, Note Nexus has you covered. We offer:</p>
-        <ul>
-            <li>Intuitive music composition software</li>
-            <li>Virtual instruments and digital audio workstations</li>
-            <li>Collaboration features to connect with other musicians</li>
-            <li>Tutorials and resources to help you master your craft</li>
-            <li>And much more...</li>
-        </ul>
-
-        <h3>Our Team</h3>
-        <p>We are a dedicated team of music enthusiasts, software developers, and creative minds who are committed to making your music-making journey enjoyable and successful. Our combined expertise in music and technology ensures that you have the best tools at your disposal.</p>
-
-        <h3>Contact Us</h3>
-        <p>Have questions, suggestions, or feedback? We'd love to hear from you! Please feel free to reach out to our team through the contact information provided on our website.</p>
-    </section>
-
-</body>
+        </script>
+    </head>
+    <body>
+        <div>
+            <fieldset class="menu_bar">
+                <h3>
+                    <a href="#body">Home</a>&nbsp;&nbsp;&nbsp;
+                    <a href="mainmusic.html">Make Music</a>&nbsp;&nbsp;&nbsp;
+                    <a href="yourfiles.html">Your Files</a>&nbsp;&nbsp;&nbsp;
+                    <a href="tutorial.html">Tutorial</a>&nbsp;&nbsp;&nbsp;
+                    <a href="signup.html">Sign Up</a>&nbsp;&nbsp;&nbsp;
+                    <a href="login.html">Login</a>&nbsp;&nbsp;&nbsp;
+                    <a href="aboutus.html">About Us</a>
+                </h3>
+            </fieldset>
+        </div>
+        <hr>
+        <div id="body">
+            <p id="prod_name" href="#home">Note Nexus</p>
+        </div>
+    </body>
 </html>
